--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --config ./config/webpack.config.prod.js",
-    "start": "webpack serve --config ./config/webpack.config.dev.js"
+    "start": "webpack serve --config ./config/webpack.config.dev.js",
+    "generate": "node dev/generate.mjs"
   },
   "devDependencies": {
     "adm-zip": "^0.5.9",
@@ -15,6 +16,7 @@
     "css-loader": "^6.4.0",
     "html-webpack-plugin": "^5.4.0",
     "p5": "^1.4.2",
+    "puppeteer": "^16.2.0",
     "style-loader": "^3.3.0",
     "webpack": "^5.59.0",
     "webpack-cli": "^4.9.1",
